--- a/archives/toutiao-search/2023-12-19.md
+++ b/archives/toutiao-search/2023-12-19.md
@@ -1,35 +1,68 @@
 # 2023-12-19
 
-共 187 条
+共 217 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Dec 19 2023 11:00:36 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Dec 19 2023 12:00:56 GMT+0800 (China Standard Time) -->
 1. [地震已致甘肃105人遇难397人受伤](https://so.toutiao.com/search?keyword=地震已致甘肃105人遇难397人受伤)
-1. [甘肃地震亲历者：彻夜屋外烤火避险](https://so.toutiao.com/search?keyword=甘肃地震亲历者：彻夜屋外烤火避险)
-1. [这一年 我们向科学高峰进发](https://so.toutiao.com/search?keyword=这一年+我们向科学高峰进发)
-1. [地震后学校为防冻伤组织学生跑操](https://so.toutiao.com/search?keyword=地震后学校为防冻伤组织学生跑操)
 1. [甘肃6.2级地震瞬间：砖块如雨落下](https://so.toutiao.com/search?keyword=甘肃6.2级地震瞬间：砖块如雨落下)
-1. [哈登半节6记3分 快船151-127步行者](https://so.toutiao.com/search?keyword=哈登半节6记3分+快船151-127步行者)
-1. [24小时直击甘肃地震救援现场](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援现场)
-1. [甘肃群众在避险时天空中有鸟群盘旋](https://so.toutiao.com/search?keyword=甘肃群众在避险时天空中有鸟群盘旋)
-1. [医保统筹额度年底将清零？谣言](https://so.toutiao.com/search?keyword=医保统筹额度年底将清零？谣言)
-1. [男子骑车接电话撞死老人后崩溃大喊](https://so.toutiao.com/search?keyword=男子骑车接电话撞死老人后崩溃大喊)
-1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
-1. [甘肃积石山震区未来几天无降水过程](https://so.toutiao.com/search?keyword=甘肃积石山震区未来几天无降水过程)
-1. [多家银行关停特色存款产品](https://so.toutiao.com/search?keyword=多家银行关停特色存款产品)
-1. [董明珠自曝是i人](https://so.toutiao.com/search?keyword=董明珠自曝是i人)
-1. [甘肃省委书记赶往灾区](https://so.toutiao.com/search?keyword=甘肃省委书记赶往灾区)
-1. [数十辆渣土车路口不减速组队闯红灯](https://so.toutiao.com/search?keyword=数十辆渣土车路口不减速组队闯红灯)
+1. [地震后学校为防冻伤组织学生跑操](https://so.toutiao.com/search?keyword=地震后学校为防冻伤组织学生跑操)
+1. [哈登近4年首次单场命中至少8个三分](https://so.toutiao.com/search?keyword=哈登近4年首次单场命中至少8个三分)
+1. [甘肃地震亲历者：彻夜屋外烤火避险](https://so.toutiao.com/search?keyword=甘肃地震亲历者：彻夜屋外烤火避险)
 1. [上海警方通报女子言语滋扰执勤武警](https://so.toutiao.com/search?keyword=上海警方通报女子言语滋扰执勤武警)
+1. [24小时直击甘肃地震救援现场](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援现场)
+1. [航拍甘肃积石山地震震中村庄画面](https://so.toutiao.com/search?keyword=航拍甘肃积石山地震震中村庄画面)
+1. [医保统筹额度年底将清零？谣言](https://so.toutiao.com/search?keyword=医保统筹额度年底将清零？谣言)
+1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
+1. [甘肃6.2级地震为何破坏力这么大](https://so.toutiao.com/search?keyword=甘肃6.2级地震为何破坏力这么大)
+1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
+1. [记者：快船一个月前没法得分破百](https://so.toutiao.com/search?keyword=记者：快船一个月前没法得分破百)
+1. [地震后师生在校园裹被子烤火取暖](https://so.toutiao.com/search?keyword=地震后师生在校园裹被子烤火取暖)
+1. [西安一高校宿舍门不开学生砸门逃生](https://so.toutiao.com/search?keyword=西安一高校宿舍门不开学生砸门逃生)
+1. [侵犯哨兵情节严重将处10日以下拘留](https://so.toutiao.com/search?keyword=侵犯哨兵情节严重将处10日以下拘留)
+1. [甘肃相关铁路部门启动Ⅰ级应急响应](https://so.toutiao.com/search?keyword=甘肃相关铁路部门启动Ⅰ级应急响应)
+1. [数十辆渣土车路口不减速组队闯红灯](https://so.toutiao.com/search?keyword=数十辆渣土车路口不减速组队闯红灯)
+1. [多地血库告急 民众为何不愿献血了](https://so.toutiao.com/search?keyword=多地血库告急+民众为何不愿献血了)
+1. [西宁震感强烈老师带学生裹被子撤离](https://so.toutiao.com/search?keyword=西宁震感强烈老师带学生裹被子撤离)
+1. [诺曼·鲍威尔贡献19分 三分6中4](https://so.toutiao.com/search?keyword=诺曼·鲍威尔贡献19分+三分6中4)
+1. [以军承认：哈马斯“难以被摧毁”](https://so.toutiao.com/search?keyword=以军承认：哈马斯“难以被摧毁”)
+1. [地震瞬间烤肉店主大喊客人成功避险](https://so.toutiao.com/search?keyword=地震瞬间烤肉店主大喊客人成功避险)
+1. [最高检依法对骆玉林决定逮捕](https://so.toutiao.com/search?keyword=最高检依法对骆玉林决定逮捕)
+1. [男子骑车接电话撞死老人后崩溃大喊](https://so.toutiao.com/search?keyword=男子骑车接电话撞死老人后崩溃大喊)
+1. [甘肃地震寻人求助信息](https://so.toutiao.com/search?keyword=甘肃地震寻人求助信息)
+1. [美国宣布展开多国红海护航行动](https://so.toutiao.com/search?keyword=美国宣布展开多国红海护航行动)
+1. [合肥回应是否取消禁放烟花爆竹](https://so.toutiao.com/search?keyword=合肥回应是否取消禁放烟花爆竹)
+1. [甘肃能化：临夏地震对经营没有影响](https://so.toutiao.com/search?keyword=甘肃能化：临夏地震对经营没有影响)
+1. [黄百鸣晒与周海媚合照](https://so.toutiao.com/search?keyword=黄百鸣晒与周海媚合照)
+1. [学者：年轻人正摒弃“面子”消费](https://so.toutiao.com/search?keyword=学者：年轻人正摒弃“面子”消费)
+1. [地震灾区气温极低给救援增加难度](https://so.toutiao.com/search?keyword=地震灾区气温极低给救援增加难度)
+1. [李国庆评孟羽童被开除](https://so.toutiao.com/search?keyword=李国庆评孟羽童被开除)
+1. [哈登半节6记3分 快船151-127步行者](https://so.toutiao.com/search?keyword=哈登半节6记3分+快船151-127步行者)
+1. [专家分析甘肃地震致重大伤亡原因](https://so.toutiao.com/search?keyword=专家分析甘肃地震致重大伤亡原因)
+1. [甘肃店主震后收留多名市民进店取暖](https://so.toutiao.com/search?keyword=甘肃店主震后收留多名市民进店取暖)
+1. [董明珠自曝是i人](https://so.toutiao.com/search?keyword=董明珠自曝是i人)
+1. [甘肃群众在避险时天空中有鸟群盘旋](https://so.toutiao.com/search?keyword=甘肃群众在避险时天空中有鸟群盘旋)
+1. [为何低温下花生油有的凝固有的澄清](https://so.toutiao.com/search?keyword=为何低温下花生油有的凝固有的澄清)
+1. [女教师称水杯疑被学生投放不明物质](https://so.toutiao.com/search?keyword=女教师称水杯疑被学生投放不明物质)
+1. [甘肃积石山震区未来几天无降水过程](https://so.toutiao.com/search?keyword=甘肃积石山震区未来几天无降水过程)
+1. [人民子弟兵第一时间挺进震中](https://so.toutiao.com/search?keyword=人民子弟兵第一时间挺进震中)
+1. [加沙已有19453人死于本轮巴以冲突](https://so.toutiao.com/search?keyword=加沙已有19453人死于本轮巴以冲突)
+1. [甘肃地震发布会现场向遇难同胞默哀](https://so.toutiao.com/search?keyword=甘肃地震发布会现场向遇难同胞默哀)
+1. [大雪撕下了新能源汽车的遮羞布？](https://so.toutiao.com/search?keyword=大雪撕下了新能源汽车的遮羞布？)
+1. [最新导弹试射对朝鲜军力意味着什么](https://so.toutiao.com/search?keyword=最新导弹试射对朝鲜军力意味着什么)
+1. [兰大开通地震受灾学生困难补助通道](https://so.toutiao.com/search?keyword=兰大开通地震受灾学生困难补助通道)
+1. [李国庆劝董明珠给年轻人留个面子](https://so.toutiao.com/search?keyword=李国庆劝董明珠给年轻人留个面子)
+1. [两男生互相怂恿性侵醉酒女生被判刑](https://so.toutiao.com/search?keyword=两男生互相怂恿性侵醉酒女生被判刑)
+1. [救灾物资正陆续抵达甘肃积石山](https://so.toutiao.com/search?keyword=救灾物资正陆续抵达甘肃积石山)
+1. [这一年 我们向科学高峰进发](https://so.toutiao.com/search?keyword=这一年+我们向科学高峰进发)
+1. [多家银行关停特色存款产品](https://so.toutiao.com/search?keyword=多家银行关停特色存款产品)
+1. [甘肃省委书记赶往灾区](https://so.toutiao.com/search?keyword=甘肃省委书记赶往灾区)
 1. [甘肃临夏大河家黄河大桥出现裂缝](https://so.toutiao.com/search?keyword=甘肃临夏大河家黄河大桥出现裂缝)
 1. [北京市消防救援总队副政治委员被查](https://so.toutiao.com/search?keyword=北京市消防救援总队副政治委员被查)
 1. [美媒的“挺菲”文章让菲律宾人尴尬](https://so.toutiao.com/search?keyword=美媒的“挺菲”文章让菲律宾人尴尬)
-1. [两男生互相怂恿性侵醉酒女生被判刑](https://so.toutiao.com/search?keyword=两男生互相怂恿性侵醉酒女生被判刑)
 1. [国家地震应急响应级别提升至二级](https://so.toutiao.com/search?keyword=国家地震应急响应级别提升至二级)
 1. [甘肃强震 全国多地网友收到预警](https://so.toutiao.com/search?keyword=甘肃强震+全国多地网友收到预警)
-1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
 1. [1440名消防员赶赴甘肃灾区救援](https://so.toutiao.com/search?keyword=1440名消防员赶赴甘肃灾区救援)
-1. [多地血库告急 民众为何不愿献血了](https://so.toutiao.com/search?keyword=多地血库告急+民众为何不愿献血了)
 1. [李斌用时速90公里测续航合理吗](https://so.toutiao.com/search?keyword=李斌用时速90公里测续航合理吗)
 1. [世俱杯：弗鲁米嫩塞2-0开罗国民](https://so.toutiao.com/search?keyword=世俱杯：弗鲁米嫩塞2-0开罗国民)
 1. [甘肃地震女子抱娃裹被子院内避险](https://so.toutiao.com/search?keyword=甘肃地震女子抱娃裹被子院内避险)
@@ -39,9 +72,6 @@
 1. [男子未考上编制求复合被拒跳楼身亡](https://so.toutiao.com/search?keyword=男子未考上编制求复合被拒跳楼身亡)
 1. [哈马斯：美对加沙平民伤亡负有责任](https://so.toutiao.com/search?keyword=哈马斯：美对加沙平民伤亡负有责任)
 1. [万达集团前总裁丁本锡失联](https://so.toutiao.com/search?keyword=万达集团前总裁丁本锡失联)
-1. [侵犯哨兵情节严重将处10日以下拘留](https://so.toutiao.com/search?keyword=侵犯哨兵情节严重将处10日以下拘留)
-1. [女教师称水杯疑被学生投放不明物质](https://so.toutiao.com/search?keyword=女教师称水杯疑被学生投放不明物质)
-1. [西安一高校宿舍门不开学生砸门逃生](https://so.toutiao.com/search?keyword=西安一高校宿舍门不开学生砸门逃生)
 1. [女生睡醒发现被亲戚们围观](https://so.toutiao.com/search?keyword=女生睡醒发现被亲戚们围观)
 1. [草莓大降价 你实现草莓自由了吗](https://so.toutiao.com/search?keyword=草莓大降价+你实现草莓自由了吗)
 1. [广东省委第二巡视组原组长被双开](https://so.toutiao.com/search?keyword=广东省委第二巡视组原组长被双开)
