--- a/archives/toutiao-search/2023-12-19.md
+++ b/archives/toutiao-search/2023-12-19.md
@@ -1,63 +1,84 @@
 # 2023-12-19
 
-共 262 条
+共 282 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Dec 19 2023 14:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Dec 19 2023 15:00:52 GMT+0800 (China Standard Time) -->
 1. [甘肃地震遇难人数已达118人](https://so.toutiao.com/search?keyword=甘肃地震遇难人数已达118人)
 1. [甘肃6.2级地震瞬间：砖块如雨落下](https://so.toutiao.com/search?keyword=甘肃6.2级地震瞬间：砖块如雨落下)
 1. [从这些数字看拼搏向前的中国](https://so.toutiao.com/search?keyword=从这些数字看拼搏向前的中国)
-1. [航拍甘肃积石山地震震中村庄画面](https://so.toutiao.com/search?keyword=航拍甘肃积石山地震震中村庄画面)
-1. [甘肃地震亲历者：彻夜屋外烤火避险](https://so.toutiao.com/search?keyword=甘肃地震亲历者：彻夜屋外烤火避险)
 1. [地震后学校为防冻伤组织学生跑操](https://so.toutiao.com/search?keyword=地震后学校为防冻伤组织学生跑操)
+1. [甘肃地震亲历者：彻夜屋外烤火避险](https://so.toutiao.com/search?keyword=甘肃地震亲历者：彻夜屋外烤火避险)
+1. [专家回应网民起诉《新华字典》](https://so.toutiao.com/search?keyword=专家回应网民起诉《新华字典》)
 1. [24小时直击甘肃地震救援现场](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援现场)
-1. [专家分析甘肃地震致重大伤亡原因](https://so.toutiao.com/search?keyword=专家分析甘肃地震致重大伤亡原因)
-1. [医保统筹额度年底将清零？谣言](https://so.toutiao.com/search?keyword=医保统筹额度年底将清零？谣言)
-1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
+1. [法学泰斗江平逝世](https://so.toutiao.com/search?keyword=法学泰斗江平逝世)
 1. [甘肃6.2级地震为何破坏力这么大](https://so.toutiao.com/search?keyword=甘肃6.2级地震为何破坏力这么大)
+1. [鸟群盘旋是地震前兆？多地曾辟谣](https://so.toutiao.com/search?keyword=鸟群盘旋是地震前兆？多地曾辟谣)
+1. [侵犯哨兵情节严重将处10日以下拘留](https://so.toutiao.com/search?keyword=侵犯哨兵情节严重将处10日以下拘留)
+1. [航拍甘肃积石山地震震中村庄画面](https://so.toutiao.com/search?keyword=航拍甘肃积石山地震震中村庄画面)
+1. [地震瞬间烤肉店主大喊客人成功避险](https://so.toutiao.com/search?keyword=地震瞬间烤肉店主大喊客人成功避险)
+1. [西安一高校宿舍门不开学生砸门逃生](https://so.toutiao.com/search?keyword=西安一高校宿舍门不开学生砸门逃生)
+1. [快船迎4天3赛 对手排名均高于自己](https://so.toutiao.com/search?keyword=快船迎4天3赛+对手排名均高于自己)
+1. [专家分析甘肃地震致重大伤亡原因](https://so.toutiao.com/search?keyword=专家分析甘肃地震致重大伤亡原因)
+1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
+1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
+1. [旺旺集团宣布向甘肃地震灾区捐款](https://so.toutiao.com/search?keyword=旺旺集团宣布向甘肃地震灾区捐款)
+1. [戴维斯32+14 湖人不敌尼克斯](https://so.toutiao.com/search?keyword=戴维斯32+14+湖人不敌尼克斯)
+1. [数十辆渣土车路口不减速组队闯红灯](https://so.toutiao.com/search?keyword=数十辆渣土车路口不减速组队闯红灯)
+1. [积石山县养殖户：救援队在搭安置房](https://so.toutiao.com/search?keyword=积石山县养殖户：救援队在搭安置房)
+1. [兰州的哥收留满月宝宝车内取暖](https://so.toutiao.com/search?keyword=兰州的哥收留满月宝宝车内取暖)
+1. [柯前幕僚曝民众党内参民调惨不忍睹](https://so.toutiao.com/search?keyword=柯前幕僚曝民众党内参民调惨不忍睹)
+1. [众星为灾区救援提供支持](https://so.toutiao.com/search?keyword=众星为灾区救援提供支持)
+1. [上海警方通报女子言语滋扰执勤武警](https://so.toutiao.com/search?keyword=上海警方通报女子言语滋扰执勤武警)
+1. [张雪峰：这个天骑电动车确实有点冷](https://so.toutiao.com/search?keyword=张雪峰：这个天骑电动车确实有点冷)
+1. [女生正过18岁生日下一秒地震发生](https://so.toutiao.com/search?keyword=女生正过18岁生日下一秒地震发生)
+1. [西部战区1架运-20已抵达甘肃](https://so.toutiao.com/search?keyword=西部战区1架运-20已抵达甘肃)
+1. [网友看《一念关山》大结局后的反应](https://so.toutiao.com/search?keyword=网友看《一念关山》大结局后的反应)
+1. [饭馆老板地震时立马疏散顾客和家人](https://so.toutiao.com/search?keyword=饭馆老板地震时立马疏散顾客和家人)
+1. [为何低温下花生油有的凝固有的澄清](https://so.toutiao.com/search?keyword=为何低温下花生油有的凝固有的澄清)
+1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
+1. [新东方捐款1000万援助甘肃](https://so.toutiao.com/search?keyword=新东方捐款1000万援助甘肃)
+1. [大雪撕下了新能源汽车的遮羞布？](https://so.toutiao.com/search?keyword=大雪撕下了新能源汽车的遮羞布？)
+1. [国民党紧抓经济议题](https://so.toutiao.com/search?keyword=国民党紧抓经济议题)
+1. [积石山县地震灾区面向社会接收捐赠](https://so.toutiao.com/search?keyword=积石山县地震灾区面向社会接收捐赠)
+1. [以军在加沙清理战场 铲车拖坦克](https://so.toutiao.com/search?keyword=以军在加沙清理战场+铲车拖坦克)
+1. [韩国仁川市：新生儿奖励1亿韩元](https://so.toutiao.com/search?keyword=韩国仁川市：新生儿奖励1亿韩元)
+1. [浙江公羊救援队奔赴地震灾区](https://so.toutiao.com/search?keyword=浙江公羊救援队奔赴地震灾区)
+1. [起诉新华字典女子：等待立案消息](https://so.toutiao.com/search?keyword=起诉新华字典女子：等待立案消息)
+1. [中纪委公布4名“内鬼”被查处消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被查处消息)
+1. [小米公益基金会宣布向地震灾区捐款](https://so.toutiao.com/search?keyword=小米公益基金会宣布向地震灾区捐款)
+1. [美女老师进教室被放非诚勿扰bgm](https://so.toutiao.com/search?keyword=美女老师进教室被放非诚勿扰bgm)
+1. [学者：年轻人正摒弃“面子”消费](https://so.toutiao.com/search?keyword=学者：年轻人正摒弃“面子”消费)
+1. [华西医院专家组赴甘肃救援](https://so.toutiao.com/search?keyword=华西医院专家组赴甘肃救援)
+1. [临夏州副州长：棉衣棉被等较紧缺](https://so.toutiao.com/search?keyword=临夏州副州长：棉衣棉被等较紧缺)
+1. [最高检依法对骆玉林决定逮捕](https://so.toutiao.com/search?keyword=最高检依法对骆玉林决定逮捕)
+1. [香港将启动赈灾基金援助甘肃](https://so.toutiao.com/search?keyword=香港将启动赈灾基金援助甘肃)
+1. [地震时如果我们正在睡觉该怎么办](https://so.toutiao.com/search?keyword=地震时如果我们正在睡觉该怎么办)
+1. [医保统筹额度年底将清零？谣言](https://so.toutiao.com/search?keyword=医保统筹额度年底将清零？谣言)
 1. [青海海东市抗震救灾发布会](https://so.toutiao.com/search?keyword=青海海东市抗震救灾发布会)
 1. [多所高校官宣“不为硕士安排宿舍”](https://so.toutiao.com/search?keyword=多所高校官宣“不为硕士安排宿舍”)
 1. [地震瞬间网管主动让出逃生楼道](https://so.toutiao.com/search?keyword=地震瞬间网管主动让出逃生楼道)
 1. [NBA本赛季5次有球队失分150+](https://so.toutiao.com/search?keyword=NBA本赛季5次有球队失分150+)
-1. [西安一高校宿舍门不开学生砸门逃生](https://so.toutiao.com/search?keyword=西安一高校宿舍门不开学生砸门逃生)
-1. [地震瞬间烤肉店主大喊客人成功避险](https://so.toutiao.com/search?keyword=地震瞬间烤肉店主大喊客人成功避险)
-1. [侵犯哨兵情节严重将处10日以下拘留](https://so.toutiao.com/search?keyword=侵犯哨兵情节严重将处10日以下拘留)
-1. [为何低温下花生油有的凝固有的澄清](https://so.toutiao.com/search?keyword=为何低温下花生油有的凝固有的澄清)
 1. [甘肃临夏地震距上次地震时间短距离近](https://so.toutiao.com/search?keyword=甘肃临夏地震距上次地震时间短距离近)
-1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
-1. [上海警方通报女子言语滋扰执勤武警](https://so.toutiao.com/search?keyword=上海警方通报女子言语滋扰执勤武警)
 1. [地震时老师迅速叫醒所有学生撤离](https://so.toutiao.com/search?keyword=地震时老师迅速叫醒所有学生撤离)
-1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
-1. [韩国仁川市：新生儿奖励1亿韩元](https://so.toutiao.com/search?keyword=韩国仁川市：新生儿奖励1亿韩元)
 1. [德国驻华使馆：对甘肃地震深感悲痛](https://so.toutiao.com/search?keyword=德国驻华使馆：对甘肃地震深感悲痛)
 1. [河南应急救援队分两路赶往灾区](https://so.toutiao.com/search?keyword=河南应急救援队分两路赶往灾区)
 1. [哈马斯公布在加沙袭击以军士兵画面](https://so.toutiao.com/search?keyword=哈马斯公布在加沙袭击以军士兵画面)
 1. [甘肃群众在避险时天空中有鸟群盘旋](https://so.toutiao.com/search?keyword=甘肃群众在避险时天空中有鸟群盘旋)
-1. [大雪撕下了新能源汽车的遮羞布？](https://so.toutiao.com/search?keyword=大雪撕下了新能源汽车的遮羞布？)
 1. [甘肃消防救援总队已累计营救61人](https://so.toutiao.com/search?keyword=甘肃消防救援总队已累计营救61人)
 1. [甘肃：亟需搜救等救援力量300余人](https://so.toutiao.com/search?keyword=甘肃：亟需搜救等救援力量300余人)
 1. [援甘干部组织积石山县震中村民撤离](https://so.toutiao.com/search?keyword=援甘干部组织积石山县震中村民撤离)
-1. [兰州的哥收留满月宝宝车内取暖](https://so.toutiao.com/search?keyword=兰州的哥收留满月宝宝车内取暖)
 1. [甘肃临夏州公布灾区捐赠咨询电话](https://so.toutiao.com/search?keyword=甘肃临夏州公布灾区捐赠咨询电话)
-1. [数十辆渣土车路口不减速组队闯红灯](https://so.toutiao.com/search?keyword=数十辆渣土车路口不减速组队闯红灯)
 1. [乔治：我还记得以前对抗哈登的日子](https://so.toutiao.com/search?keyword=乔治：我还记得以前对抗哈登的日子)
-1. [新东方捐款1000万援助甘肃](https://so.toutiao.com/search?keyword=新东方捐款1000万援助甘肃)
 1. [美宣布3亿美元对台军售 国防部回应](https://so.toutiao.com/search?keyword=美宣布3亿美元对台军售+国防部回应)
-1. [学者：年轻人正摒弃“面子”消费](https://so.toutiao.com/search?keyword=学者：年轻人正摒弃“面子”消费)
-1. [临夏州副州长：棉衣棉被等较紧缺](https://so.toutiao.com/search?keyword=临夏州副州长：棉衣棉被等较紧缺)
 1. [苹果停止在美销售部分Apple Watch](https://so.toutiao.com/search?keyword=苹果停止在美销售部分Apple+Watch)
 1. [外籍母子吞54个藏毒避孕套入境被捕](https://so.toutiao.com/search?keyword=外籍母子吞54个藏毒避孕套入境被捕)
 1. [农夫山泉连夜驰援甘肃地震灾区](https://so.toutiao.com/search?keyword=农夫山泉连夜驰援甘肃地震灾区)
 1. [知名女歌手深夜发视频称过得不顺](https://so.toutiao.com/search?keyword=知名女歌手深夜发视频称过得不顺)
-1. [最高检依法对骆玉林决定逮捕](https://so.toutiao.com/search?keyword=最高检依法对骆玉林决定逮捕)
-1. [浙江公羊救援队奔赴地震灾区](https://so.toutiao.com/search?keyword=浙江公羊救援队奔赴地震灾区)
-1. [网友看《一念关山》大结局后的反应](https://so.toutiao.com/search?keyword=网友看《一念关山》大结局后的反应)
 1. [黄百鸣晒与周海媚合照](https://so.toutiao.com/search?keyword=黄百鸣晒与周海媚合照)
-1. [旺旺集团宣布向甘肃地震灾区捐款](https://so.toutiao.com/search?keyword=旺旺集团宣布向甘肃地震灾区捐款)
 1. [两部门向甘肃青海预拨2亿救灾资金](https://so.toutiao.com/search?keyword=两部门向甘肃青海预拨2亿救灾资金)
 1. [甘肃地震24条受损农村公路均已打通](https://so.toutiao.com/search?keyword=甘肃地震24条受损农村公路均已打通)
 1. [小卡近10战场均29.4分6.6板](https://so.toutiao.com/search?keyword=小卡近10战场均29.4分6.6板)
-1. [美女老师进教室被放非诚勿扰bgm](https://so.toutiao.com/search?keyword=美女老师进教室被放非诚勿扰bgm)
 1. [小卡八连胜数据：场均29.3+5.5+4](https://so.toutiao.com/search?keyword=小卡八连胜数据：场均29.3+5.5+4)
 1. [多地血库告急 民众为何不愿献血了](https://so.toutiao.com/search?keyword=多地血库告急+民众为何不愿献血了)
 1. [美国宣布展开多国红海护航行动](https://so.toutiao.com/search?keyword=美国宣布展开多国红海护航行动)
@@ -112,7 +133,6 @@
 1. [世俱杯：弗鲁米嫩塞2-0开罗国民](https://so.toutiao.com/search?keyword=世俱杯：弗鲁米嫩塞2-0开罗国民)
 1. [甘肃地震女子抱娃裹被子院内避险](https://so.toutiao.com/search?keyword=甘肃地震女子抱娃裹被子院内避险)
 1. [南京一辅警雪中保畅不幸殉职](https://so.toutiao.com/search?keyword=南京一辅警雪中保畅不幸殉职)
-1. [张雪峰：这个天骑电动车确实有点冷](https://so.toutiao.com/search?keyword=张雪峰：这个天骑电动车确实有点冷)
 1. [新加坡恢复每日新冠疫情报数](https://so.toutiao.com/search?keyword=新加坡恢复每日新冠疫情报数)
 1. [男子未考上编制求复合被拒跳楼身亡](https://so.toutiao.com/search?keyword=男子未考上编制求复合被拒跳楼身亡)
 1. [哈马斯：美对加沙平民伤亡负有责任](https://so.toutiao.com/search?keyword=哈马斯：美对加沙平民伤亡负有责任)
