--- a/archives/toutiao-search/2023-12-19.md
+++ b/archives/toutiao-search/2023-12-19.md
@@ -1,58 +1,78 @@
 # 2023-12-19
 
-共 319 条
+共 337 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Dec 19 2023 17:01:02 GMT+0800 (China Standard Time) -->
-1. [甘肃地震遇难人数已达118人](https://so.toutiao.com/search?keyword=甘肃地震遇难人数已达118人)
+<!-- 最后更新时间 Tue Dec 19 2023 18:00:54 GMT+0800 (China Standard Time) -->
+1. [地震已造成甘肃113人死亡](https://so.toutiao.com/search?keyword=地震已造成甘肃113人死亡)
 1. [甘肃6.2级地震瞬间：砖块如雨落下](https://so.toutiao.com/search?keyword=甘肃6.2级地震瞬间：砖块如雨落下)
 1. [从这些数字看拼搏向前的中国](https://so.toutiao.com/search?keyword=从这些数字看拼搏向前的中国)
-1. [甘肃强震 全国多地网友收到预警](https://so.toutiao.com/search?keyword=甘肃强震+全国多地网友收到预警)
-1. [航拍积石山震中村庄](https://so.toutiao.com/search?keyword=航拍积石山震中村庄)
-1. [1家4口地震被埋 村民刨出3人](https://so.toutiao.com/search?keyword=1家4口地震被埋+村民刨出3人)
+1. [地震时宿舍大门紧闭 学生砸门逃生](https://so.toutiao.com/search?keyword=地震时宿舍大门紧闭+学生砸门逃生)
+1. [甘肃6.2级地震为何破坏力这么大](https://so.toutiao.com/search?keyword=甘肃6.2级地震为何破坏力这么大)
+1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
 1. [24小时直击甘肃地震救援现场](https://so.toutiao.com/search?keyword=24小时直击甘肃地震救援现场)
 1. [法学泰斗江平逝世](https://so.toutiao.com/search?keyword=法学泰斗江平逝世)
 1. [旺旺集团宣布向甘肃地震灾区捐款](https://so.toutiao.com/search?keyword=旺旺集团宣布向甘肃地震灾区捐款)
 1. [鸟群盘旋是地震前兆？多地曾辟谣](https://so.toutiao.com/search?keyword=鸟群盘旋是地震前兆？多地曾辟谣)
-1. [地震时宿舍大门紧闭 学生砸门逃生](https://so.toutiao.com/search?keyword=地震时宿舍大门紧闭+学生砸门逃生)
-1. [甘肃6.2级地震为何破坏力这么大](https://so.toutiao.com/search?keyword=甘肃6.2级地震为何破坏力这么大)
-1. [学者：年轻人正摒弃“面子”消费](https://so.toutiao.com/search?keyword=学者：年轻人正摒弃“面子”消费)
-1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
-1. [老板们都在热议的数据飞轮是啥](https://so.toutiao.com/search?keyword=老板们都在热议的数据飞轮是啥)
+1. [空军运-20抵达甘肃](https://so.toutiao.com/search?keyword=空军运-20抵达甘肃)
 1. [甘肃地震亲历者：彻夜屋外烤火避险](https://so.toutiao.com/search?keyword=甘肃地震亲历者：彻夜屋外烤火避险)
-1. [俄士兵阵亡前留在墙上的遗言曝光](https://so.toutiao.com/search?keyword=俄士兵阵亡前留在墙上的遗言曝光)
+1. [“南京过江隧道多车连环追尾”不实](https://so.toutiao.com/search?keyword=“南京过江隧道多车连环追尾”不实)
+1. [中方回应菲总统称菲中关系走错方向](https://so.toutiao.com/search?keyword=中方回应菲总统称菲中关系走错方向)
+1. [航拍积石山震中村庄](https://so.toutiao.com/search?keyword=航拍积石山震中村庄)
+1. [美军要对胡塞武装动手？分析来了](https://so.toutiao.com/search?keyword=美军要对胡塞武装动手？分析来了)
+1. [文旅局回应冰雪大世界游客喊退票](https://so.toutiao.com/search?keyword=文旅局回应冰雪大世界游客喊退票)
+1. [甘肃群众在避险时天空中有鸟群盘旋](https://so.toutiao.com/search?keyword=甘肃群众在避险时天空中有鸟群盘旋)
+1. [侵犯哨兵情节严重将处10日以下拘留](https://so.toutiao.com/search?keyword=侵犯哨兵情节严重将处10日以下拘留)
+1. [韩国仁川市：新生儿奖励1亿韩元](https://so.toutiao.com/search?keyword=韩国仁川市：新生儿奖励1亿韩元)
+1. [甘肃灾区震前卫星遥感影像公布](https://so.toutiao.com/search?keyword=甘肃灾区震前卫星遥感影像公布)
+1. [国家紧急医学救援队到达青海](https://so.toutiao.com/search?keyword=国家紧急医学救援队到达青海)
+1. [演员于洋家中存放大量金砖](https://so.toutiao.com/search?keyword=演员于洋家中存放大量金砖)
+1. [部分通往甘肃积石山道路实施管制](https://so.toutiao.com/search?keyword=部分通往甘肃积石山道路实施管制)
+1. [最高检依法对骆玉林决定逮捕](https://so.toutiao.com/search?keyword=最高检依法对骆玉林决定逮捕)
+1. [泰伦·卢谈哈登末节21分](https://so.toutiao.com/search?keyword=泰伦·卢谈哈登末节21分)
+1. [韩红等多位明星为甘肃地震捐款捐物](https://so.toutiao.com/search?keyword=韩红等多位明星为甘肃地震捐款捐物)
+1. [飞贼国资委大楼窃名烟 一半是假的](https://so.toutiao.com/search?keyword=飞贼国资委大楼窃名烟+一半是假的)
+1. [网友看《一念关山》大结局后的反应](https://so.toutiao.com/search?keyword=网友看《一念关山》大结局后的反应)
+1. [新东方捐款1000万援助甘肃](https://so.toutiao.com/search?keyword=新东方捐款1000万援助甘肃)
+1. [灾区帐篷内需防一氧化碳中毒](https://so.toutiao.com/search?keyword=灾区帐篷内需防一氧化碳中毒)
+1. [张雪峰：这个天骑电动车确实有点冷](https://so.toutiao.com/search?keyword=张雪峰：这个天骑电动车确实有点冷)
+1. [鸿星尔克向甘肃捐赠2000万物资](https://so.toutiao.com/search?keyword=鸿星尔克向甘肃捐赠2000万物资)
+1. [上海警方通报女子言语滋扰执勤武警](https://so.toutiao.com/search?keyword=上海警方通报女子言语滋扰执勤武警)
+1. [马斯克：Cybertruck可以当船使](https://so.toutiao.com/search?keyword=马斯克：Cybertruck可以当船使)
+1. [用户称地震时7部苹果手机均无预警](https://so.toutiao.com/search?keyword=用户称地震时7部苹果手机均无预警)
+1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
+1. [王诗龄回京过圣诞 吃400元3个包子](https://so.toutiao.com/search?keyword=王诗龄回京过圣诞+吃400元3个包子)
+1. [青海启动自然灾害III级救灾应急响应](https://so.toutiao.com/search?keyword=青海启动自然灾害III级救灾应急响应)
+1. [男子拆快递时意外收到2箱现金](https://so.toutiao.com/search?keyword=男子拆快递时意外收到2箱现金)
+1. [武警官兵紧急搜救转移群众](https://so.toutiao.com/search?keyword=武警官兵紧急搜救转移群众)
+1. [地震瞬间烤肉店主大喊客人成功避险](https://so.toutiao.com/search?keyword=地震瞬间烤肉店主大喊客人成功避险)
+1. [这个肩膀安全感满满](https://so.toutiao.com/search?keyword=这个肩膀安全感满满)
+1. [朱丹“被骗”事件始末](https://so.toutiao.com/search?keyword=朱丹“被骗”事件始末)
+1. [甘肃柳沟村：村民篝火取暖一夜未眠](https://so.toutiao.com/search?keyword=甘肃柳沟村：村民篝火取暖一夜未眠)
+1. [震区店主免费为救援人员提供牛肉面](https://so.toutiao.com/search?keyword=震区店主免费为救援人员提供牛肉面)
+1. [学者：年轻人正摒弃“面子”消费](https://so.toutiao.com/search?keyword=学者：年轻人正摒弃“面子”消费)
+1. [地震时如果我们正在睡觉该怎么办](https://so.toutiao.com/search?keyword=地震时如果我们正在睡觉该怎么办)
+1. [酥饼店连夜做5000个饼支援震区](https://so.toutiao.com/search?keyword=酥饼店连夜做5000个饼支援震区)
+1. [普京正式登记为总统候选人](https://so.toutiao.com/search?keyword=普京正式登记为总统候选人)
+1. [甘肃地震遇难人数已达118人](https://so.toutiao.com/search?keyword=甘肃地震遇难人数已达118人)
+1. [甘肃强震 全国多地网友收到预警](https://so.toutiao.com/search?keyword=甘肃强震+全国多地网友收到预警)
+1. [1家4口地震被埋 村民刨出3人](https://so.toutiao.com/search?keyword=1家4口地震被埋+村民刨出3人)
+1. [老板们都在热议的数据飞轮是啥](https://so.toutiao.com/search?keyword=老板们都在热议的数据飞轮是啥)
 1. [网友晒在草原牧区的日常生活](https://so.toutiao.com/search?keyword=网友晒在草原牧区的日常生活)
 1. [地震灾区现场企业免费分发牛肉面](https://so.toutiao.com/search?keyword=地震灾区现场企业免费分发牛肉面)
-1. [侵犯哨兵情节严重将处10日以下拘留](https://so.toutiao.com/search?keyword=侵犯哨兵情节严重将处10日以下拘留)
 1. [俄总理抵达北京 中国副外长接机](https://so.toutiao.com/search?keyword=俄总理抵达北京+中国副外长接机)
-1. [鸿星尔克向甘肃捐赠2000万物资](https://so.toutiao.com/search?keyword=鸿星尔克向甘肃捐赠2000万物资)
-1. [网友看《一念关山》大结局后的反应](https://so.toutiao.com/search?keyword=网友看《一念关山》大结局后的反应)
-1. [中方回应菲总统称菲中关系走错方向](https://so.toutiao.com/search?keyword=中方回应菲总统称菲中关系走错方向)
-1. [地震时如果我们正在睡觉该怎么办](https://so.toutiao.com/search?keyword=地震时如果我们正在睡觉该怎么办)
 1. [为何低温下花生油有的凝固有的澄清](https://so.toutiao.com/search?keyword=为何低温下花生油有的凝固有的澄清)
 1. [鳖盖被压坏男子索赔两万多吓坏司机](https://so.toutiao.com/search?keyword=鳖盖被压坏男子索赔两万多吓坏司机)
 1. [甘肃和新疆两地地震有关联吗](https://so.toutiao.com/search?keyword=甘肃和新疆两地地震有关联吗)
-1. [空军运-20抵达甘肃](https://so.toutiao.com/search?keyword=空军运-20抵达甘肃)
-1. [张雪峰：这个天骑电动车确实有点冷](https://so.toutiao.com/search?keyword=张雪峰：这个天骑电动车确实有点冷)
 1. [甘肃人民医院搭建野外流动手术室](https://so.toutiao.com/search?keyword=甘肃人民医院搭建野外流动手术室)
-1. [文旅局回应冰雪大世界游客喊退票](https://so.toutiao.com/search?keyword=文旅局回应冰雪大世界游客喊退票)
-1. [上海警方通报女子言语滋扰执勤武警](https://so.toutiao.com/search?keyword=上海警方通报女子言语滋扰执勤武警)
 1. [甘肃积石山震区夜间最低将达-14℃](https://so.toutiao.com/search?keyword=甘肃积石山震区夜间最低将达-14℃)
 1. [飞贼韩城国资委大楼窃名烟一半是假的](https://so.toutiao.com/search?keyword=飞贼韩城国资委大楼窃名烟一半是假的)
-1. [新疆克州阿图什市发生5.5级地震](https://so.toutiao.com/search?keyword=新疆克州阿图什市发生5.5级地震)
 1. [航拍青海海东彻夜救援画面](https://so.toutiao.com/search?keyword=航拍青海海东彻夜救援画面)
-1. [国家紧急医学救援队到达青海](https://so.toutiao.com/search?keyword=国家紧急医学救援队到达青海)
 1. [布伦森对阵湖人砍全队最高29分](https://so.toutiao.com/search?keyword=布伦森对阵湖人砍全队最高29分)
 1. [甘肃地震灾区急需棉大衣和取暖设备](https://so.toutiao.com/search?keyword=甘肃地震灾区急需棉大衣和取暖设备)
 1. [法学界人士发文悼念江平](https://so.toutiao.com/search?keyword=法学界人士发文悼念江平)
 1. [孩子一只手变紫 网友建议尽快就医](https://so.toutiao.com/search?keyword=孩子一只手变紫+网友建议尽快就医)
-1. [甘肃群众在避险时天空中有鸟群盘旋](https://so.toutiao.com/search?keyword=甘肃群众在避险时天空中有鸟群盘旋)
 1. [多所高校官宣“不为硕士安排宿舍”](https://so.toutiao.com/search?keyword=多所高校官宣“不为硕士安排宿舍”)
-1. [韩国仁川市：新生儿奖励1亿韩元](https://so.toutiao.com/search?keyword=韩国仁川市：新生儿奖励1亿韩元)
-1. [新东方捐款1000万援助甘肃](https://so.toutiao.com/search?keyword=新东方捐款1000万援助甘肃)
-1. [王诗龄回京过圣诞 吃400元3个包子](https://so.toutiao.com/search?keyword=王诗龄回京过圣诞+吃400元3个包子)
-1. [武警官兵紧急搜救转移群众](https://so.toutiao.com/search?keyword=武警官兵紧急搜救转移群众)
-1. [韩红等多位明星为甘肃地震捐款捐物](https://so.toutiao.com/search?keyword=韩红等多位明星为甘肃地震捐款捐物)
 1. [中纪委公布4名“内鬼”被查处消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被查处消息)
 1. [地震后学校为防冻伤组织学生跑操](https://so.toutiao.com/search?keyword=地震后学校为防冻伤组织学生跑操)
 1. [航拍甘肃积石山地震震中村庄画面](https://so.toutiao.com/search?keyword=航拍甘肃积石山地震震中村庄画面)
@@ -61,7 +81,6 @@
 1. [美女老师进教室被放非诚勿扰bgm](https://so.toutiao.com/search?keyword=美女老师进教室被放非诚勿扰bgm)
 1. [知名女歌手深夜发视频称过得不顺](https://so.toutiao.com/search?keyword=知名女歌手深夜发视频称过得不顺)
 1. [詹姆斯职业生涯第109次揽三双](https://so.toutiao.com/search?keyword=詹姆斯职业生涯第109次揽三双)
-1. [地震瞬间烤肉店主大喊客人成功避险](https://so.toutiao.com/search?keyword=地震瞬间烤肉店主大喊客人成功避险)
 1. [兰州的哥收留满月宝宝车内取暖](https://so.toutiao.com/search?keyword=兰州的哥收留满月宝宝车内取暖)
 1. [多家企业捐款捐物驰援甘肃](https://so.toutiao.com/search?keyword=多家企业捐款捐物驰援甘肃)
 1. [范弗里特27+8+17 哈登后火箭第一人](https://so.toutiao.com/search?keyword=范弗里特27+8+17+哈登后火箭第一人)
@@ -93,7 +112,6 @@
 1. [起诉新华字典女子：等待立案消息](https://so.toutiao.com/search?keyword=起诉新华字典女子：等待立案消息)
 1. [华西医院专家组赴甘肃救援](https://so.toutiao.com/search?keyword=华西医院专家组赴甘肃救援)
 1. [临夏州副州长：棉衣棉被等较紧缺](https://so.toutiao.com/search?keyword=临夏州副州长：棉衣棉被等较紧缺)
-1. [最高检依法对骆玉林决定逮捕](https://so.toutiao.com/search?keyword=最高检依法对骆玉林决定逮捕)
 1. [香港将启动赈灾基金援助甘肃](https://so.toutiao.com/search?keyword=香港将启动赈灾基金援助甘肃)
 1. [医保统筹额度年底将清零？谣言](https://so.toutiao.com/search?keyword=医保统筹额度年底将清零？谣言)
 1. [青海海东市抗震救灾发布会](https://so.toutiao.com/search?keyword=青海海东市抗震救灾发布会)
